# python-sweep

./: Cargo.toml  README.md  SECURITY.md
.github/: CONTRIBUTING.md
.github/workflows/: clippy.yml  rust_test.yml
src/: main.rs
