[package]
name = "python-sweep"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/yaleman/python-sweep"
license = "MIT"
description = "A simple tool to help you clean up your Python virtual environments"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
readme = "README.md"

[dependencies]
byte-unit = "5.1.6"
clap = { version = "4.5.46", features = ["derive"] }
ctrlc = "3.4.7"
dialoguer = "0.12.0"
walkdir = "2.5.0"
which = "8.0.0"
