[package]
name = "python-sweep"
version = "0.0.4"
edition = "2021"
repository = "https://github.com/yaleman/python-sweep"
license = "MIT"
description = "A simple tool to help you clean up your Python virtual environments"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
readme = "README.md"

[dependencies]
byte-unit = "5.2.0"
clap = { version = "4.5.56", features = ["derive"] }
ctrlc = "3.5.1"
dialoguer = "0.12.0"
walkdir = "2.5.0"
which = "8.0.0"
